Closed Bug 1082827 Opened 11 years ago Closed 11 years ago

Direct2D backend mismatches when Direct2D 1.1 is supported

Categories

(Core :: Graphics, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
firefox33 --- unaffected
firefox34 --- unaffected
firefox35 - unaffected
firefox36 + fixed
firefox37 + fixed

People

(Reporter: mwu, Assigned: bas.schouten)

References

Details

Attachments

(1 file)

We don't allow the D2D 1.1 backend to be selected for the canvas backend when it's available. Going to send to try and see if this is ok.
test_streams_element_capture.html appears to permafail on Win 8 when canvas is configured with D2D 1.1
(In reply to Michael Wu [:mwu] from comment #2) > test_streams_element_capture.html appears to permafail on Win 8 when canvas > is configured with D2D 1.1 Yes, I've asked Milan to see if he could reproduce this on a try-server like machine, none of my local machines reproduce the problem sadly :-(. We could as a temporary workaround disable this particular part of the test, but it would be nice if we'd understand -why- this was happening.
Unassigning myself - I don't know enough to debug that reftest failure.
Assignee: mwu → nobody
D2D1.1 wasn't enabled before Firefox 35.
Attachment #8505009 - Flags: review+
Assignee: nobody → bas
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
With bug 1095608, it's not enabled on 35 so this should not be an issue.
Bas, could you fill the uplift request for aurora? Thanks
Flags: needinfo?(bas)
(In reply to Sylvestre Ledru [:sylvestre] from comment #8) > Bas, could you fill the uplift request for aurora? Thanks As I thought, this is already on Aurora, it rode the trains: http://hg.mozilla.org/releases/mozilla-aurora/file/bd53ccf7ce3e/gfx/thebes/gfxWindowsPlatform.cpp#l492
Flags: needinfo?(bas)
Depends on: 1151821
Depends on: 1152824
Depends on: 1154318
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: