Bug 1082827: Allow D2D 1.1 to be selected for the canvas backend. r=bas